--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,19 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.header{
+  width: 100vw;
+  height: 20vh;
+  background-color: red;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.dashboard{
+  width: 60vw;
+  height: 80vh;
+  background-color: antiquewhite;
 }
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.form{
+  width: 38vw;
+  height: 80vh;
 }
